--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,11 +6,13 @@
 
 #root {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .App {
     width: 800px;
+    margin: 0 auto;
 }
 
 .post {
@@ -22,18 +24,39 @@
     align-items: center;
 }
 
+.post__btns {
+    display: flex;
+    gap: 3px;
+}
+
 .page__wrapper {
     margin-top: 30px;
     display: flex;
+    justify-content: center;
+    gap: 3px;
 }
 
 .page {
     padding: 10px;
     border: 1px solid teal;
     cursor: pointer;
+    
 }
 
 .page__current {
     border: 2px solid orange;
     font-weight: bold;
+}
+
+.navbar {
+    height: 50px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    background-color: lightgray;
+}
+
+.navbar__items {
+    margin-left: auto;
 }
